compiler/testData/diagnostics/tests/effects/smartcasts/receiver.kt
// !DIAGNOSTICS: -INVISIBLE_MEMBER -INVISIBLE_REFERENCE

import kotlin.internal.*

@Returns(ConstantValue.TRUE)
fun @receiver:Equals(ConstantValue.NULL) Any?.isNull() = this == null

fun testSmartcastOnReceiver(x: Int?) {
    if (x.isNull()) {
        x<!UNSAFE_CALL!>.<!>inc()
    } else {
        <!DEBUG_INFO_SMARTCAST!>x<!>.dec()
    }
}